# axiom-os

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  conftest.py  pyproject.toml  pyrightconfig.json
.cursor/rules/: axiom.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.junie/: guidelines.md
docs/adrs/: adr-001-polyglot-monorepo-bazel.md  adr-002-hyperledger-fabric-multi-facility.md  adr-003-lakehouse-iceberg-duckdb-superset.md  adr-004-infrastructure-terraform-k8s-helm.md  adr-005-meeting-intake-pipeline.md  adr-006-mcp-agentic-access.md  adr-007-streaming-first-architecture.md  adr-008-wasm-extension-runtime.md  adr-009-promote-media-internalize-db.md  adr-010-cli-architecture.md  adr-011-concurrent-file-writes.md  adr-012-provider-identity.md  adr-013-k3d-containerd.md  adr-014-rag-tiered-local-cache.md  adr-015-shared-service-boundaries.md  adr-016-multi-node-federation.md  adr-017-release-pipeline-supply-chain.md  adr-018-public-llm-endpoint.md  adr-019-node-profiles.md  adr-020-federation-identity-and-relationships.md  adr-021-federation-threat-model.md  adr-022-federation-identity-roots-and-membership-separation.md  adr-023-federation-topology-lifecycle-propagation.md  adr-024-federation-root-availability-delegation.md  adr-025-federation-threat-model.md  adr-026-ownership-model.md  adr-027-federated-memory.md  adr-028-trust-graph.md  adr-029-federation-composition.md  adr-030-federated-inference.md  adr-031-extension-self-containment.md  adr-032-standards-positioning-dual-track.md  adr-033-layered-memory-architecture.md  adr-034-plan-and-agent-pipeline.md  adr-035-human-principal-binding.md  adr-036-extension-runtime-surfaces.md  adr-037-federation-state-propagation.md  adr-038-builtin-mcp-server.md  adr-039-scientific-displays.md  adr-040-compute-decomposition.md  (+56 more)
docs/conventions/: the-axiomatic-way.md
docs/papers/: whitepaper-aeos.md
docs/prds/: prd-agent-state-management.md  prd-agents.md  prd-alumni.md  prd-analytics-dashboards.md  prd-auto-research.md  prd-axi-cli.md  prd-axiom-agent-plane.md  prd-axiom-auth-sso.md  prd-axiom-authz.md  prd-axiom-mcp-gateway.md  prd-axiom-notifications.md  prd-axiom-schedule.md  prd-axiom-vault.md  prd-builtin-mcp-server.md  prd-calendar-protocol.md  prd-canary-nodes.md  prd-chat-driven-corrections.md  prd-classroom.md  prd-commands-generator.md  prd-compliance-tracking.md  prd-compute-decomposition.md  prd-connections.md  prd-controlled-code-development.md  prd-cross-mem.md  prd-cross-surface-memory.md  prd-cross-tool-memory.md  prd-data-platform.md  prd-doe-data-management.md  prd-evals.md  prd-event-bus.md  prd-extension-runtime-surfaces.md  prd-federation-state-propagation.md  prd-federation.md  prd-hooks.md  prd-identity-acquisition.md  prd-identity-and-bindings.md  prd-knowledge-graph.md  prd-logging.md  prd-managed-infrastructure.md  prd-media-library.md  (+11 more)
docs/reference/: glossary-axiom.toml  harness-memory-survey-2026-07.md
docs/security/: cross-mem-serving-boundary.md
docs/specs/: README.md  spec-aeos-0.1.md  spec-aeos-1.0.md  spec-aeos-identity-addendum.md  spec-agent-action-guard.md  spec-agent-architecture.md  spec-agent-coverage-manifest.md  spec-agent-state-management.md  spec-auto-research.md  spec-axi-cli.md  spec-axiom-notifications.md  spec-axiom-schedule.md  spec-brand-identity.md  spec-builtin-mcp-server.md  spec-canary-nodes.md  spec-chat-driven-corrections.md  spec-chat-model-picker.md  spec-cicd-and-deployment.md  spec-classification-boundary.md  spec-classroom-addendum-lti-xapi.md  spec-classroom-generate-shortcuts.md  spec-classroom.md  spec-compute-decomposition.md  (+45 more)
infra/: docker-compose.yml
mirror/: exclude.txt
scripts/: apply_copyright_headers.py  box_oauth_login.py  box_oauth_login_local.py  build_public_mirror.py  demo-classification-routing.py  demo-coordinated-workloads.py  demo-fmp-phase-a-scaffold.py  demo-three-approaches-scientist.py  demo-trust-weighted-retrieval.py  gen_rag_eval.py  inspect-mcp-memory.py  lint_adr_numbers.py  lint_markdown_cli_commands.py  rag_scorecard.py
src/axiom/extensions/builtins/diagnostics/: AGENT.md  README.md  ROUTINES.md  SKILLS.md  __init__.py  agent.py  agent_cli.py  axiom-extension.toml  cli.py  cli_diagnoses.py  cli_listener.py  config.schema.json  incident_chat.py  incident_comms.py  incident_interview.py  pyproject.toml  reviewer.py  safety.py  subscriber.py  tools.py  workload_health.py
src/axiom/extensions/builtins/diagnostics/agents/triage/: __init__.py  persona.md
src/axiom/extensions/builtins/diagnostics/tests/: conftest.py  test_cli_diagnoses.py  test_cli_diagnoses_llm.py  test_cli_listener.py  test_incident_chat.py  test_triage_persona_loaded.py  test_triage_safety.py
src/axiom/extensions/builtins/diagnostics/tests/unit_tests/: test_diagnostics_standard.py  test_incident_comms.py  test_incident_interview.py  test_workload_health.py
tests/: README.md  _pollution_guard.py  conftest.py  test_agent_learning.py  test_agent_sharing.py  test_anthropic_ingress.py  test_backup.py  test_badge_spike.py  test_benchmark_harness.py  test_branding_package_name.py  test_canary_nodes.py  test_cli_tiers.py  test_confidence_gate.py  test_curio_quality_gate.py  test_deterministic_extraction.py  test_ec_screening.py  test_embedding_infra.py  test_entity_resolution.py  test_federation_chaos.py  test_federation_daemon.py  test_federation_packs.py  test_federation_policy.py  test_federation_rag_endpoint.py  test_federation_research.py  test_federation_security.py  test_federation_stress.py  test_gateway.py  test_gateway_auto_routing.py  test_gateway_auto_routing_e2e.py  test_gen_rag_eval_telemetry.py  test_graph_enhanced_chunker.py  test_graph_extractor_llm.py  test_graph_store.py  test_infra_parity.py  test_lint_adr_numbers.py  test_llm_extraction.py  test_llm_params.py  test_local_principal.py  test_mdns_discovery.py  test_mirror.py  (+20 more)
(+2485 files in other folders)
