# Copyright (c) 2026 The University of Texas at Austin
# Copyright (c) 2026 B-Tree Labs
# SPDX-License-Identifier: Apache-2.0
#
# This pyproject.toml makes `diagnostics/` AEOS-portable (principle #10).
# It is NOT pip-installed today — `diagnostics/` ships inside the
# axi-platform package. When the extension extracts to a standalone
# repository this manifest becomes the package definition.

[project]
name = "axiom-diagnostics"
version = "0.2.0"
description = "Axiom diagnostics + system-health extension — houses TRIAGE."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"

[project.entry-points."axiom.agents"]
triage = "axiom.extensions.builtins.diagnostics.agent:DoctorAgent"

[project.entry-points."axiom.commands"]
doctor = "axiom.extensions.builtins.diagnostics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diagnostics"]
